Tue Oct  7 23:01:44 UTC 2008  Steve Huston  <shuston@riverace.com>

        * tests/Network_Adapters_Test.cpp: If the ping/raw socket open fails
          because of a lack of privilege, issue a warning that the test can't
          run, not an error.

Mon Oct  6 22:27:54 UTC 2008  Steve Huston  <shuston@riverace.com>

        * ace/WFMO_Reactor.inl (suspend_handlers): Never suspend the notify
          or the wakeup_all_threads handles - these are specially set up by
          ACE_WFMO_Reactor::open(), not by users, and are critical to the
          proper functioning of the event loop.
          Fixes Bugzilla #3267.

        * tests/Reactor_Dispatch_Order_Test.cpp: Added some additional
          sanity checks and fixed some logging.

Fri Oct  3 19:05:39 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * ace/Reactor_Token_T.cpp:

          Made reactor notify with zero timeout and ignore timeout case in
          sleep_hook(). This would fix bugzilla 2465 reactor deadlock 
          problem.
          
Thu Oct  2 16:41:57 UTC 2008  Steve Huston  <shuston@riverace.com>

        * ace/Basic_Types.h: Adjust the byte order decision for Itanium
          hardware. Itanium can run either byte order - the OS selects it
          at boot. The checks were correct for Windows (and maybe Linux)
          but not for HP-UX. Apparantly something in the predefined macros
          at aC++ 06.20 changed enough to fool this check.

Mon Sep 29 18:04:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/CDR_File_Test.cpp:
        * tests/Log_Msg_Test.cpp:
          VxWorks 6.6 can't unlink in advance on NFS

Mon Sep 29 13:36:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/acedefaults.mpb:
        * tests/unload_libace.mpb:
          Use unicode lib modifier

Sun Sep 28 18:16:53 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3432_Regression_Test.cpp:
        * tests/OS_Test.cpp: