@@ -248,14 +248,15 @@ ACE_Ping_Socket::process_incoming_dgram (char * ptr, ssize_t len)
           ACE_TEXT ("(%P|%t) ACE_Ping_Socket::process_incoming_dgram")
           ACE_TEXT (" - ICMP_ECHOREPLY received.\n")));
 
-      if (icmp->icmp_id != getpid ())
+      if (icmp->icmp_id != getpid () & 0xFFFF)
         {
           ACE_ERROR_RETURN
             ((LM_ERROR,
               ACE_TEXT ("(%P|%t) ACE_Ping_Socket::")
               ACE_TEXT ("process_incoming_dgram ")
-              ACE_TEXT ("- The ICMP header received is a reply")
-              ACE_TEXT (" to request of another process.")),
+              ACE_TEXT ("- The ICMP header received is a reply to request ")
+              ACE_TEXT ("of another process (%d; expected %d).\n"),
+              icmp->icmp_id, getpid()),
              -1);
         }
       if (icmplen < 16)
@@ -329,7 +330,7 @@ ACE_Ping_Socket::send_echo_check (ACE_INET_Addr &remote_addr,
   _icmp = (struct icmp *) this->icmp_send_buff_;
   _icmp->icmp_type = ICMP_ECHO;
   _icmp->icmp_code = 0;
-  _icmp->icmp_id = getpid ();
+  _icmp->icmp_id = getpid () && 0xFFFF;
   _icmp->icmp_seq = sequence_number_++;
 
 #if defined (ACE_WIN32)
